templates/www-htdus/013-www-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: www
  name: www
  namespace: www-htdus
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: htdus.mazdermind.de
    http:
      paths:
      - backend:
          serviceName: www
          servicePort: www
